--- a/style.css
+++ b/style.css
@@ -1,60 +1,15 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-#app {
-  height: 100vh;
-}
-
-.my-header {
-  background-color: #607d8b;
-  border:none;
-}
-
-.my-header div {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header-label {
-  color: #fff;
-  margin-left: 12px;
-}
-
-.transparent-button {
-  margin-right: 12px;
-}
-
-.transparent-button .webix_button {
-  background: transparent;
-  border: none;
-  color: #fff;
-}
-
-.webix_secondary .webix_button .webix_icon_btn {
-  color: #fff;
-}
+.webix_el_box .transparent-btn .webix_el_box .webix_button{
+    background-color: transparent;
+  }
 
 .sidebar {
-  background-color: #eceff1;
-
-}
-
-.connected-status div{
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  color: green;
-  background-color:#eceff1;
-}
-
-.footer {
   background-color: #f1f1f1;
-  border-top: 1px solid #dee2e6;
-  text-align: center;
-  padding: 10px;
-  border:none;
+}
+
+.connected {
+  border-color: #dadee0;
+  border-width: 0px 0px 1px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
